# rust-matrix-appservice-webhooks

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml
src/: bot.rs  config.rs  emoji.rs  main.rs  store.rs  webhook.rs  webhook_request.rs
