[package]
name = "rust-matrix-appservice-webhooks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk-appservice = { git = "https://github.com/matrix-org/matrix-rust-sdk/", tag = "matrix-sdk-0.4.1" , features = ["warp"]}
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk/", tag = "matrix-sdk-0.4.1", features = ["encryption"] }
serde_yaml = "0.8.21"
serde = "1.0.130"
anyhow = "1.0.44"
clap = "3.0.0-beta.5"
tokio = {version = "1.12.0", features = ["rt-multi-thread", "macros", "signal"] }
serde_json = "1.0.68"
reqwest = "0.11.4"
mime = "0.3.16"
warp = { git = "https://github.com/seanmonstar/warp.git", rev = "629405", default-features = false }
scraper = "0.12.0"
lazy_static = "1.4.0"
sqlx = {version = "0.5.9", features = [ "runtime-tokio-native-tls", "sqlite" ] }
randid = "0.1.0"
sha2 = "0.9.8"
hex = "0.4.3"
http = "0.2.5"
log = "0.4.14"
env_logger = "0.9.0"
dashmap = "4"
uuid = "0.8.2"
